# adventOfCode

./: .gitignore  shell.nix
2021/25/: Cargo.toml
2021/25/src/: main.rs
2022/: .gitignore  README.md
2022/1/: README.md  part1.ts  part2.ts
2022/2/: part1.ts  part2.ts
2022/3/: part1.ts  part2.ts
2022/4/: part1.ts  part2.ts
2022/5/: part1.ts  part2.ts
2022/6/: part1.ts  part2.ts
2022/7/: part1.ts  part2.ts
2022/7/rust/src/: main.rs
2022/8/: part1.ts  part2.ts
2023/1/: .gitignore  eda.cpp  part1.py  part2.py
2023/1/src/: main.rs
2023/10/src/: main.rs
2023/11/: part1.py  part2.py
2023/12/: haskelltest.py  part1.py
2023/14/: part1.py  part2.py
2023/14/src/: main.rs
2023/15/: part1.py  part2.py
2023/16/: Cargo.toml  build.sh  part1.py
2023/16/src/: main.rs
2023/2/: README.md  part1.py  part2.py
2023/3/: README.md  part1.py  part2.py  testinput
2023/4/: README.md  part1.py  part2.py
2023/5/: README.md  part1.py  part2.py
2023/6/: part1.py  part2.py
2023/7/: inputt  part1.py  part2.py
2023/8/: part1.py  part2.py
2023/8/src/: main.rs
2023/9/: part1.py  part2.py
2024/: Cargo.toml
2024/c/: 01.c  Makefile
2024/src/: lib.rs
