[package]
name = "sixteenth"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[target.x86_64-unknown-linux-gnu]
rustflags = [
    "-C", "target-feature=+crt-static"
]